Set Logback and Log4jdbc
 - Logback 및 Log4jdbc 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 #MsSql Server
-spring.datasource.hikari.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.hikari.jdbc-url=jdbc:sqlserver://localhost:1433;databaseName=home_DB
+#spring.datasource.hikari.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.hikari.jdbc-url=jdbc:sqlserver://localhost:1433;databaseName=home_DB
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:sqlserver://localhost:1433;databaseName=home_DB
 spring.datasource.hikari.username=hjlee
 spring.datasource.hikari.password=hjlee
 spring.datasource.hikari.connection-test-query=SELECT * FROM USER_TB
+
+spring.profiles.active=local
+#spring.profiles.active=dev
+
+#LogBack Level
+logging.level.root=info
