Thymeleaf Template Add  - thymeleaf 사용을위한 dependency 추가 및 테스트용 index.html 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.profiles.active=local
 
 #LogBack Level
 logging.level.root=info
+
+#thymeleaf
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
