--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.thymeleaf.cache=false
 
 file.tempPath=C:\\upload\\temp\\
 file.pdfMergePath=C:\\upload\\merge\\
+
+#Server HTTP port
+server.port = 8088
